fix(style): Add dark mode color to blockquote

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,6 +19,7 @@ $color-light-info: $color-grey-2;
 $color-light-enabled: $color-grey-2;
 $color-light-disabled: $color-grey-5;
 $color-light-meta: white;
+$color-light-blockquote: $color-grey-6;
 
 /* Color variables (Dark mode) */
 $color-dark-background: #181818;
@@ -31,6 +32,7 @@ $color-dark-info: $color-grey-4;
 $color-dark-enabled: $color-grey-5;
 $color-dark-disabled: $color-grey-2;
 $color-dark-meta: #181818;
+$color-dark-blockquote: $color-grey-1;
 
 /* Color variables with var() */
 :root[color-mode="light"] {
@@ -44,6 +46,7 @@ $color-dark-meta: #181818;
   --color-enabled: #{$color-light-enabled};
   --color-disabled: #{$color-light-disabled};
   --color-meta-theme: #{$color-light-meta};
+  --color-blockquote: #{$color-light-blockquote};
 }
 :root[color-mode="dark"] {
   --color-background: #{$color-dark-background};
@@ -56,6 +59,7 @@ $color-dark-meta: #181818;
   --color-enabled: #{$color-dark-enabled};
   --color-disabled: #{$color-dark-disabled};
   --color-meta-theme: #{$color-dark-meta};
+  --color-blockquote: #{$color-dark-blockquote};
 }
 
 /* Viewpoint variables */
