--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -80,7 +80,7 @@ $hash-link-margin-top: $header-height + 32px;
   }
   blockquote {
     border-left: 8px solid $color-primary;
-    background-color: $color-grey-6;
+    background-color: var(--color-blockquote);
     margin: 16px 0;
     padding: 16px 32px;
   }
